--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Inmuebles bonitos</title>
 </head>
 <body>
     <header>
@@ -12,7 +12,9 @@
             <img src="" alt="Imagen de logo bonito">
             <div>
                 <button type="button">Iniciar sesión</button>
-                <button type="button">Registrar usuario</button>
+                <a href="registrar/index.html">
+                    <button type="button">Registrar usuario</button>
+                </a>
                 <button class="oculto" type="button">Ver perfil</button>
             </div>
         </div>
