--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -3,20 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Inmuebles bonitos</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Iniciar sesión</title>
 </head>
 <body>
     <header>
         <div>
-            <div>
-                <img class="logo" src="https://s3-alpha.figma.com/hub/file/1913095808/a7bdc469-cd70-4ea1-bb57-b59204ad8182-cover.png" alt="Imagen de logo bonito">
-            </div>
+            <img class="logo" src="https://s3-alpha.figma.com/hub/file/1913095808/a7bdc469-cd70-4ea1-bb57-b59204ad8182-cover.png" alt="Imagen de logo bonito">
             <div>
                 <a href="">
                     <button type="button">Iniciar sesión</button>
                 </a>
-                <a href="registrar/index.html">
+                <a href="../registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
                 <button class="oculto" type="button">Ver perfil</button>
@@ -25,7 +23,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="index.html">Menú</a>
+                    <a href="../index.html">Menú</a>
                 </li>
                 <li>
                     <a href="">Compras</a>
@@ -37,13 +35,9 @@
         </div>
     </header>
     <main>
-        <h2>Listado de inmuebles</h2>
-        <div>
-            <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
-            <details>
-                <summary>Detalles del inmueble</summary>
-            </details>
-        </div>
+        <form>
+            
+        </form>
     </main>
     <footer class="centrado">
         <p>
