--- a/registrar/index.html
+++ b/registrar/index.html
@@ -38,20 +38,20 @@
         <fieldset>
             <legend>Registrar usuario</legend>
             <label for="cedula">Cédula: </label>
-            <input type="text" name="cedula" id="cedula"><br><br>
+            <input type="text" name="cedula" id="cedula" required><br><br>
             <label for="nombre">Nombre: </label>
-            <input type="text" name="nombre" id="nombre"><br><br>
+            <input type="text" name="nombre" id="nombre" required><br><br>
             <label for="apellido">Apellido: </label>
-            <input type="text" name="apellido" id="apellido"><br><br>
+            <input type="text" name="apellido" id="apellido" required><br><br>
             <label for="nacimiento">Nacimiento: </label>
-            <input type="datetime" name="nacimiento" id="nacimiento"><br><br>
+            <input type="datetime" name="nacimiento" id="nacimiento" required><br><br>
             <label for="direccion">Dirección: </label>
-            <input type="text" name="direccion" id="direccion"><br><br>
+            <input type="text" name="direccion" id="direccion" required><br><br>
             <label for="correo">Correo electrónico: </label>
-            <input type="email" name="correo" id="correo"><br><br>
+            <input type="email" name="correo" id="correo" required><br><br>
             <label for="contraseña">Contraseña: </label>
-            <input type="password" name="contraseña" id="contraseña"><br><br>
-            <button type="button">Registrar usuario</button>
+            <input type="password" name="contraseña" id="contraseña" required><br><br>
+            <button type="submit">Registrar usuario</button>
         </fieldset>
     </form>
     <footer class="centrado">
