--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <header>
         <div>
-            <div>
-                <img class="logo" src="https://s3-alpha.figma.com/hub/file/1913095808/a7bdc469-cd70-4ea1-bb57-b59204ad8182-cover.png" alt="Imagen de logo bonito">
-            </div>
+            <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
             <div>
                 <a href="">
                     <button type="button">Iniciar sesión</button>
