--- a/registrar/index.html
+++ b/registrar/index.html
@@ -44,7 +44,7 @@
             <label for="apellido">Apellido: </label>
             <input type="text" name="apellido" id="apellido" required><br><br>
             <label for="nacimiento">Nacimiento: </label>
-            <input type="datetime" name="nacimiento" id="nacimiento" required><br><br>
+            <input type="date" name="nacimiento" id="nacimiento" required><br><br>
             <label for="direccion">Dirección: </label>
             <input type="text" name="direccion" id="direccion" required><br><br>
             <label for="correo">Correo electrónico: </label>
