--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -26,10 +26,7 @@
                     <a href="../index.html">Menú</a>
                 </li>
                 <li>
-                    <a href="">Compras</a>
-                </li>
-                <li>
-                    <a href="">Ofertas</a>
+                    <a href="">Todas las propiedades</a>
                 </li>
             </ul>
         </div>
