--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
             <details>
                 <summary>Detalles del inmueble</summary>
+                <img src="https://th.bing.com/th/id/OIG.X0T6maYMA1.Z54JtQ7VG?pid=ImgGn" alt="Cocina">
             </details>
         </div>
     </main>
