--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
             <div>
-                <a href="">
+                <a href="iniciar/index.html">
                     <button type="button">Iniciar sesión</button>
                 </a>
                 <a href="registrar/index.html">
