--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -11,7 +11,7 @@
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
             <div>
-                <a href="">
+                <a href="index.html">
                     <button type="button">Iniciar sesión</button>
                 </a>
                 <a href="../registrar/index.html">
@@ -33,7 +33,14 @@
     </header>
     <main>
         <form>
-
+            <fieldset>
+                <legend>Iniciar sesión</legend>
+                <label for="correo">Correo electrónico: </label>
+                <input type="email" name="correo" id="correo" required><br><br>
+                <label for="contraseña">Contraseña: </label>
+                <input type="password" name="contraseña" id="contraseña" required><br><br>
+                <button type="submit">Registrar usuario</button>
+            </fieldset>
         </form>
     </main>
     <footer class="centrado">
