--- a/registrar/index.html
+++ b/registrar/index.html
@@ -31,26 +31,31 @@
             </ul>
         </div>
     </header>
-    <form>
-        <fieldset>
-            <legend>Registrar usuario</legend>
-            <label for="cedula">Cédula: </label>
-            <input type="text" name="cedula" id="cedula" required><br><br>
-            <label for="nombre">Nombre: </label>
-            <input type="text" name="nombre" id="nombre" required><br><br>
-            <label for="apellido">Apellido: </label>
-            <input type="text" name="apellido" id="apellido" required><br><br>
-            <label for="nacimiento">Nacimiento: </label>
-            <input type="date" name="nacimiento" id="nacimiento" required><br><br>
-            <label for="direccion">Dirección: </label>
-            <input type="text" name="direccion" id="direccion" required><br><br>
-            <label for="correo">Correo electrónico: </label>
-            <input type="email" name="correo" id="correo" required><br><br>
-            <label for="contraseña">Contraseña: </label>
-            <input type="password" name="contraseña" id="contraseña" required><br><br>
-            <button type="submit">Registrar usuario</button>
-        </fieldset>
-    </form>
+    <main>
+        <form>
+            <fieldset>
+                <legend>Registrar usuario</legend>
+                <label for="cedula">Cédula: </label>
+                <input type="text" name="cedula" id="cedula" required><br><br>
+                <label for="nombre">Nombre: </label>
+                <input type="text" name="nombre" id="nombre" required><br><br>
+                <label for="apellido">Apellido: </label>
+                <input type="text" name="apellido" id="apellido" required><br><br>
+                <label for="nacimiento">Nacimiento: </label>
+                <input type="date" name="nacimiento" id="nacimiento" required><br><br>
+                <label for="direccion">Dirección: </label>
+                <input type="text" name="direccion" id="direccion" required><br><br>
+                <label for="correo">Correo electrónico: </label>
+                <input type="email" name="correo" id="correo" required><br><br>
+                <label for="contraseña">Contraseña: </label>
+                <input type="password" name="contraseña" id="contraseña" required><br><br>
+                <button type="submit">Registrar usuario</button>
+            </fieldset>
+            <p>
+                <a href="../iniciar/index.html">¿Ya tienes cuenta? ¡Inicia sesión!</a>
+            </p>
+        </form>
+    </main>
     <footer class="centrado">
         <p>
             <a href="">Términos y condiciones</a> <br>
