--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -41,6 +41,9 @@
                 <input type="password" name="contraseña" id="contraseña" required><br><br>
                 <button type="submit">Registrar usuario</button>
             </fieldset>
+            <p>
+                <a href="../registrar/index.html">¿No tienes una cuenta? ¡Regístrate!</a>
+            </p>
         </form>
     </main>
     <footer class="centrado">
