--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -35,6 +35,10 @@
         <form>
             <fieldset>
                 <legend>Iniciar sesión</legend>
+                <label for="">
+                    <span>aopdufiiasd</span>
+                    <input type="text">
+                </label>
                 <label for="correo">Correo electrónico: </label>
                 <input type="email" name="correo" id="correo" required><br><br>
                 <label for="contraseña">Contraseña: </label>
