--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <main>
         <h2>Listado de inmuebles</h2>
         <div>
+            <h2>¡Encuentras nuestros inmuebles ya!</h2>
             <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
             <details>
                 <summary>Detalles del inmueble</summary>
