--- a/perfil/index.html
+++ b/perfil/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Perfil</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+            <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
+            <div>
+                <a href="index.html">
+                    <button type="button">Iniciar sesión</button>
+                </a>
+                <a href="../registrar/index.html">
+                    <button type="button">Registrar usuario</button>
+                </a>
+                <button class="oculto" type="button">Ver perfil</button>
+            </div>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <a href="../index.html">Menú</a>
+                </li>
+                <li>
+                    <a href="">Todas las propiedades</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <main class="seccion">
+        <section>
+            <h2>Información del perfil</h2>
+            <div>
+                <p>Correo: correo@gmail.com</p>
+                <p>Nombres: Eduardo Matías</p>
+                <p>Apellidos: Castañueda Garcíaz</p>
+                <p>Cédula: 12232423</p>
+                <p>Dirección: Al lado de una esquina</p>
+            </div>
+        </section>
+        <section>
+            <h2>Opciones de perfil</h2>
+            <div>
+                <button type="button">Modificar perfil</button>
+                <button type="button">Cambiar contraseña</button>
+                <button type="button">Ver historial de visitas</button>
+            </div>
+        </section>
+    </main>
+    <footer class="centrado">
+        <p>
+            <a href="">Términos y condiciones</a> <br>
+            <a href="">Contáctanos</a> <br>
+            <a href="https://youtu.be/dQw4w9WgXcQ?si=cfrPyhPG3F9aX9Xb" target="_blank">Rick Rolls gratis</a>
+        </p>
+    </footer>
 </body>
 </html>
