con mas cambios

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <button class="oculto" type="button">Ver perfil</button>
             </div>
         </div>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="index.html">Menú</a>
@@ -29,10 +29,11 @@
                     <a href="">Todas las propiedades</a>
                 </li>
             </ul>
-        </div>
+        </nav>
+        <img height="300px" width="100%" src="assets/banner.jpg" alt="Baner que definitivamente no es IA">
     </header>
     <main>
-        <h2>Listado de inmuebles</h2>
+        <!-- <h2>Listado de inmuebles</h2>
         <div>
             <h2>¡Encuentras nuestros inmuebles ya!</h2>
             <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
@@ -40,7 +41,8 @@
                 <summary>Detalles del inmueble</summary>
                 <img src="https://th.bing.com/th/id/OIG.X0T6maYMA1.Z54JtQ7VG?pid=ImgGn" alt="Cocina">
             </details>
-        </div>
+        </div> -->
+        
     </main>
     <footer class="centrado">
         <p>
