--- a/todas/index.html
+++ b/todas/index.html
@@ -3,34 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Inmuebles bonitos</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>Iniciar sesión</title>
 </head>
 <body>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
             <div>
-                <a href="iniciar/index.html">
+                <a href="index.html">
                     <button type="button">Iniciar sesión</button>
                 </a>
-                <a href="registrar/index.html">
+                <a href="../registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
                 <button class="oculto" type="button">Ver perfil</button>
             </div>
         </div>
-        <nav>
+        <div>
             <ul>
                 <li>
-                    <a href="index.html">Menú</a>
+                    <a href="../index.html">Menú</a>
                 </li>
                 <li>
-                    <a href="">Todas las propiedades</a>
+                    <a href="index.html">Todas las propiedades</a>
                 </li>
             </ul>
-        </nav>
-        <img height="300px" width="100%" src="assets/banner.jpg" alt="Baner que definitivamente no es IA">
+        </div>
     </header>
     <main>
         <h2>Inmuebles a la venta</h2>
@@ -60,16 +59,6 @@
                 <p>Permanente</p>
             </div>
         </section>
-        <!-- <h2>Listado de inmuebles</h2>
-        <div>
-            <h2>¡Encuentras nuestros inmuebles ya!</h2>
-            <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
-            <details>
-                <summary>Detalles del inmueble</summary>
-                <img src="https://th.bing.com/th/id/OIG.X0T6maYMA1.Z54JtQ7VG?pid=ImgGn" alt="Cocina">
-            </details>
-        </div> -->
-        
     </main>
     <footer class="centrado">
         <p>
