--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="index.html">Menú</a>
                 </li>
                 <li>
-                    <a href="">Todas las propiedades</a>
+                    <a href="todas/index.html">Todas las propiedades</a>
                 </li>
             </ul>
         </nav>
@@ -59,17 +59,7 @@
                 <p>Caracas</p>
                 <p>Permanente</p>
             </div>
-        </section>
-        <!-- <h2>Listado de inmuebles</h2>
-        <div>
-            <h2>¡Encuentras nuestros inmuebles ya!</h2>
-            <img src="https://media.vandalsports.com/i/640x360/7-2022/20227199386_1.jpg" alt="Imagen de un inmueble muy bonito">
-            <details>
-                <summary>Detalles del inmueble</summary>
-                <img src="https://th.bing.com/th/id/OIG.X0T6maYMA1.Z54JtQ7VG?pid=ImgGn" alt="Cocina">
-            </details>
-        </div> -->
-        
+        </section>      
     </main>
     <footer class="centrado">
         <p>
