--- a/registrar/index.html
+++ b/registrar/index.html
@@ -26,7 +26,7 @@
                     <a href="../index.html">Menú</a>
                 </li>
                 <li>
-                    <a href="">Todas las propiedades</a>
+                    <a href="../todas/index.html">Todas las propiedades</a>
                 </li>
             </ul>
         </div>
