--- a/todas/index.html
+++ b/todas/index.html
@@ -32,7 +32,21 @@
         </div>
     </header>
     <main>
-        <h2>Inmuebles a la venta</h2>
+        <form>
+            <fieldset>
+                <legend>Opciones de filtrado</legend>
+                <label for="ubicacion">Ubicación: </label>
+                <input type="text" name="ubicacion" id="ubicacion">
+                <label for="habitaciones">Cantidad de habitaciones: </label>
+                <input type="number" name="habitaciones" id="habitaciones">
+                <label for="baños">Cantidad de baños: </label>
+                <input type="number" name="baños" id="baños">
+                <label for="antiguedad">Antigüedad: </label>
+                <input type="date" name="antiguedad" id="antiguedad">
+                <label for="metros">Metros cuadrados: </label>
+                <input type="number" name="metros" id="metros">
+            </fieldset>
+        </form>
         <section class="inmuebles">
             <div>
                 <img src="https://th.bing.com/th/id/OIG.GBgg4Q6Qxfl1ZQjSKLMZ?pid=ImgGn" alt="">
@@ -54,6 +68,78 @@
             </div>
             <div>
                 <img src="https://th.bing.com/th/id/OIG.mTZyPRQ4BcK2BJlp6PLa?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.XH9dDJZ9DtXt6vDyTSVG?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.bPBVdxwxvnX13Bm.yyfC?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>https://th.bing.com/th/id/OIG.Dfpm_HdlSZQce.c4OKUO?pid=ImgGn
+                <img src="https://th.bing.com/th/id/OIG.S.5StvsQv72meBifFiJA?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.VHIB7tbbzHUhS9RsaGj_?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.5qdCdUwJegBisPyTMJRI?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG._DjRvvgILP2ETbjSfqiO?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.YSyFpxX0i5cO2d6tNPuW?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
                 <p>40.000$</p>
                 <p>Caracas</p>
                 <p>Permanente</p>
