con mas cositas esteticas

--- a/todas/index.html
+++ b/todas/index.html
@@ -84,7 +84,7 @@
                 <p>Caracas</p>
                 <p>Permanente</p>
             </div>
-            <div>https://th.bing.com/th/id/OIG.Dfpm_HdlSZQce.c4OKUO?pid=ImgGn
+            <div>
                 <img src="https://th.bing.com/th/id/OIG.S.5StvsQv72meBifFiJA?pid=ImgGn" alt="">
                 <p>40.000$</p>
                 <p>Caracas</p>
@@ -133,7 +133,7 @@
                 <p>Permanente</p>
             </div>
             <div>
-                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <img src="https://th.bing.com/th/id/OIG.Dfpm_HdlSZQce.c4OKUO?pid=ImgGn" alt="">
                 <p>40.000$</p>
                 <p>Caracas</p>
                 <p>Permanente</p>
