--- a/todas/index.html
+++ b/todas/index.html
@@ -11,7 +11,7 @@
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
             <div>
-                <a href="index.html">
+                <a href="../iniciar/index.html">
                     <button type="button">Iniciar sesión</button>
                 </a>
                 <a href="../registrar/index.html">
@@ -121,25 +121,49 @@
                 <p>Permanente</p>
             </div>
             <div>
-                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
-                <p>40.000$</p>
-                <p>Caracas</p>
-                <p>Permanente</p>
-            </div>
-            <div>
-                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
-                <p>40.000$</p>
-                <p>Caracas</p>
-                <p>Permanente</p>
-            </div>
-            <div>
                 <img src="https://th.bing.com/th/id/OIG.Dfpm_HdlSZQce.c4OKUO?pid=ImgGn" alt="">
                 <p>40.000$</p>
                 <p>Caracas</p>
                 <p>Permanente</p>
             </div>
             <div>
-                <img src="https://th.bing.com/th/id/OIG.Cu45pc.rc5b3zX07ITy.?pid=ImgGn" alt="">
+                <img src="https://th.bing.com/th/id/OIG._YklBe4U1IlkEnPo9aFe?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.2.grUW9JnOWwEl.r_9WM?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.wvYpz5OGkn3b4GrH.r8R?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.anceTvl5WO7kBW5H0Gxj?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.T0hT24gfDgbhwJNPBzSb?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.UW8O.rUba0Gv7hGSiixF?pid=ImgGn" alt="">
+                <p>40.000$</p>
+                <p>Caracas</p>
+                <p>Permanente</p>
+            </div>
+            <div>
+                <img src="https://th.bing.com/th/id/OIG.B9V2TrSGe.BbypfUdcci?pid=ImgGn" alt="">
                 <p>40.000$</p>
                 <p>Caracas</p>
                 <p>Permanente</p>
