--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
+    <script src="index.js" defer></script>
     <title>Iniciar sesión</title>
 </head>
 <body>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Some text in the Modal Body</p>
+            </div>
+            <div class="modal-footer">
+                <button class="ingresar" type="button">Ok</button>
+            </div>
+        </div>
+    </div>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
