--- a/registrar/index.html
+++ b/registrar/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../assets/casita.ico" type="image/x-icon">
     <link rel="stylesheet" href="../style.css">
     <script src="index.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,6 +12,16 @@
     <title>Registrar usuario</title>
 </head>
 <body>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Some text in the Modal Body</p>
+            </div>
+            <div class="modal-footer">
+                <button class="ingresar" type="button">Ok</button>
+            </div>
+        </div>
+    </div>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
