--- a/iniciar/index.html
+++ b/iniciar/index.html
@@ -54,7 +54,7 @@
                 <input type="email" name="correo" id="correo" required><br><br>
                 <label for="contraseña">Contraseña: </label>
                 <input type="password" name="contraseña" id="contraseña" required><br><br>
-                <button type="submit">Registrar usuario</button>
+                <button type="submit">Iniciar sesión</button>
             </fieldset>
             <p>
                 <a href="../registrar/index.html">¿No tienes una cuenta? ¡Regístrate!</a>
