--- a/registrar/index.html
+++ b/registrar/index.html
@@ -64,6 +64,8 @@
                 <input type="email" name="correo" id="correo" required><br><br>
                 <label for="contraseña">Contraseña: </label>
                 <input type="password" name="contraseña" id="contraseña" required><br><br>
+                <label for="repetida">Contraseña (de nuevo): </label>
+                <input type="password" name="repetida" id="repetida" required><br><br>
                 <button type="submit">Registrar usuario</button>
             </fieldset>
             <p>
