--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <a href="registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <button class="oculto" type="button">Ver perfil</button>
+                <a href="perfil/index.html">
+                    <button class="oculto" type="button">Ver perfil</button>
+                </a>
                 <button class="oculto" type="button">Cerrar sesión</button>
             </div>
         </div>
