--- a/todas/index.html
+++ b/todas/index.html
@@ -22,7 +22,7 @@
                 <a href="../registrar/index.html">
                     <button type="button">Registrar usuario</button>
                 </a>
-                <a href="">
+                <a href="../perfil/index.html">
                     <button class="oculto" type="button">Ver perfil</button>
                 </a>
                 <button class="oculto" type="button">Cerrar sesión</button>
