con los modales

--- a/registrar/index.html
+++ b/registrar/index.html
@@ -22,6 +22,16 @@
             </div>
         </div>
     </div>
+    <div id="modal" class="modal">
+        <div class="modal-content">
+            <div class="modal-body">
+                <p>Some text in the Modal Body</p>
+            </div>
+            <div class="modal-footer">
+                <button class="ingresar" type="button">Ok</button>
+            </div>
+        </div>
+    </div>
     <header>
         <div>
             <img class="logo" src="https://cdn.freebiesupply.com/logos/large/2x/random-house-bertelsmann-logo-black-and-white.png" alt="Imagen de logo bonito">
